# ChangeLog for app-admin/logcheck
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/logcheck/ChangeLog,v 1.30 2014/02/08 06:06:35 phajdan.jr Exp $

*logcheck-1.3.16 (08 Feb 2014)

  08 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> +logcheck-1.3.16.ebuild:
  Version bump.

*logcheck-1.3.15-r2 (21 Jun 2013)

  21 Jun 2013; Pawel Hajdan jr <phajdan.jr@gentoo.org> -logcheck-1.3.14.ebuild,
  -logcheck-1.3.15.ebuild, +logcheck-1.3.15-r2.ebuild:
  Fix bug #449968 by flameeyes. Remove old.

  30 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  logcheck-1.3.15-r1.ebuild:
  Stabilize latest to fix a regression in stable (bug #440880 by Ivan).

*logcheck-1.3.15-r1 (30 Dec 2012)

  30 Dec 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  +logcheck-1.3.15-r1.ebuild, files/logcheck.cron:
  Make sure lock directory exists, bug #440880 by Ivan.

*logcheck-1.3.15 (31 Jul 2012)

  31 Jul 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> -logcheck-1.3.13.ebuild,
  +logcheck-1.3.15.ebuild:
  Version bump (bug #425092 by Manuel Rueger). Remove old.

  04 Jun 2012; Michael Weber <xmw@gentoo.org> logcheck-1.3.14.ebuild:
  ppc stable (bug 400757)

  31 May 2012; Zac Medico <zmedico@gentoo.org> logcheck-1.3.13.ebuild,
  logcheck-1.3.14.ebuild:
  inherit user for enewgroup and enewuser

  16 Feb 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> logcheck-1.3.14.ebuild:
  x86 stable wrt bug #400757

  25 Jan 2012; Markos Chandras <hwoarang@gentoo.org> logcheck-1.3.14.ebuild:
  Stable on amd64 wrt bug #400757

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org> logcheck-1.3.13.ebuild,
  logcheck-1.3.14.ebuild:
  Add ~sparc wrt #387629

*logcheck-1.3.14 (14 Sep 2011)

  14 Sep 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> -logcheck-1.3.8.ebuild,
  +logcheck-1.3.14.ebuild:
  Version bump. Remove old.

  14 Oct 2010; Christian Faulhammer <fauli@gentoo.org>
  logcheck-1.3.13.ebuild:
  stable x86, bug 340803
