@@ -1,8 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX logcheck.cron 184 SHA256 cfbe04b278773e775e893c4c4d29f4e465835aa4f79c342868fa9dd4ae5eaeb3 SHA512 fd0b1bc8c836b766bfbb6102012996d27e378475571167b4d4df98301793624483aca2bd51ec19a2aa367e78b062ddde67355452db8dc1d69fe84a20a2081c30 WHIRLPOOL bcdf8bcc5d15497b4d6a004d1d9b4722d4f1ca128f070c07ec522656fbe502ca34449a86ed9b944365945dfd69683ec1870b937584e746d4b00e66a8d7544ed3
 DIST logcheck_1.3.15.tar.gz 162397 SHA256 b29b4753940a9130b5f19f60d2d89af23be220674625f4bd2fb1d40945d0b9e5 SHA512 45c9e779fc1d1f417aea3f02e70eff4dbc7cd0b45e04f7efc458a4552866686cbb095d0b5ebaf32a57d423a3753b4573277a464f5539789350b087569e025abf WHIRLPOOL 7d4c1975453427eb0897b9f05670565643fd36c44204b23470adf1eac17b19ec77aaeae3523b7b1844f20acf39da0d736386b80bfc0f4059c2099ff816ddd08c
 DIST logcheck_1.3.16.tar.xz 131832 SHA256 3eea6f4d25b5cba59d30b8edd35e392389b8e4966d0aceac11c220e98426b8e6 SHA512 1dca1c571e01b2816b7d8ac7a7b5b7e4e250b8c298299c707d86e3c18bd0583b1afd72ff80e8ff98259be5eb46b719ce1e5b97377f42a1982ff292c5a92569c4 WHIRLPOOL 85d25f871dc0e31a49d518e292041b98b989957f778bd74a62aac331e1672cd5f1a346de41174f9377ee930a590faf04736f51eb5c6d6b404e22642572aa54d3
 EBUILD logcheck-1.3.15-r1.ebuild 1142 SHA256 891b4b6fc4021264ef25e8a5372fe977883600c7e181d8810e25d471e66d40e0 SHA512 9ef30240f65f2314855648ef2584a1abc158189c156d575222fd6ea388e45b8550929f16e9904adeaac336a785fd5ee4da435de7894a15ff61a00092c8dc8fc0 WHIRLPOOL 45dc6c2a575a11d0a2e2dd4d4ea6623ad75a06e98334ab58830b9cef209ad28f046d745fe220a9cf0e2f26e3a1b5477fca924827ed335afcd45155884b3a33bf
-EBUILD logcheck-1.3.15-r2.ebuild 1320 SHA256 e6a22a020ededee830844eb8fa562f1907a66d1a8397c773bf1764077ba51a9d SHA512 a185c8298c17fb37cc1a9e9c9ece6c82287e28248e56c14a883395ac843bd643aa547da94e616f6ffeb7a231fac54faa27544054a6a2d45cb9439220a90210ce WHIRLPOOL e5d25cc04b2bfa2307fa6f8485ce9520dcbb76a880c0a549b2d39e37ec51622166407b55e5d2ee36ae5e5f0a5692740d7f16655e8de7b7454091a5a26c0f1174
+EBUILD logcheck-1.3.15-r2.ebuild 1314 SHA256 6ddfb37e0fb73782518881a081cd1a2766263d6b998b57df305b5c5c3cce55bf SHA512 b56cdd3affb8188c31a788389dcd591d268331a1cfeaf4a81bc21ff461f82e410e79de499e348f76d7706eb8ca298417b6d6c3ba11633df9f41df3c39deebb8a WHIRLPOOL 88d714446357add7b93de530732d9f18df71a8174991c2f0366e38e473a8ef4f7b8a4ce23a9f9b0b7d10e8970f46e6e72adcdc24ac1eacb0a1266f4c98bdad93
 EBUILD logcheck-1.3.16.ebuild 1317 SHA256 5fe8f60cffeeadd9c63b46dc1981703611bd4d1a7d1f9751a4779f9766c8e95b SHA512 270f557eee358a276d0c93d54d5615a08fbf11376819a88759840bc0e3aa6bbf1f69cc885fc89095e7d07a6c496377ad46e4b09f99280ecdb835623f77b252aa WHIRLPOOL a1adf501a96d50a8a9d19d78161e13763308dcc3379f5535edfe2cf3c38e9213eec63812eac70f05838973222badfe0b2dd703ff3ef23748a32967c26726756a
-MISC ChangeLog 4749 SHA256 00db82370929091df0058c9835facd67d54624166319af64f81b4bc1eb7e4387 SHA512 03b773785f6daf8ffc4a631c7f6d1eeb4c2fdd27d5e539304a4e001fc9b1536a3c56ca9d7157500ae7aeccb96a8a6d25192c3dca719f60dbe5dffcdf4d78ea9e WHIRLPOOL d8c3f35b9abebb1e8f467025a07b79b89ae210f2e61a4aeec5a0b429dd882f2f5496567ed900d9d954023282163cf413b963a0e1e61914183e747566df3d8ea2
+MISC ChangeLog 4846 SHA256 769f6f8dcbec07723a25de60bd00b12c86e85d7cf1e343b448c2ba216ee69639 SHA512 16a599260883319e7afd42594351c45a39d1bc444be419513ca095b302a97f561e931ebce8534f6df58721e456bbc207dcce4c04d13b73ffd453fd52d095e33c WHIRLPOOL 7748563e29cabba9f34fc8734c5c8ad2b3063d7ffdd7fe1f4108062603ed65d7fc51d085085aeb50c1b6fb8af38fa541b52088f833a16dbd4c49175836f8426f
 MISC metadata.xml 238 SHA256 f5bfe7b3171e6a50ad6d8fb7da8ae5c20f228d93ecaaef9beea6a72d34be799a SHA512 47b8cae5eebe8b9d6fa205aad45794dd8f2af0bc09299de0a93858c1eab62ee24418bdc824f7b157e0958945664fb109fe25178af515e54f21a7ea329f79fbf5 WHIRLPOOL 332a0c68dc5ae1e45a1c2852c534c00531da9d1792b0bc665e0630e9f6dda28f623880c72b9e07ea3b9fa5c96e7451417b8643cf1e44a31b315f639910584acb
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlMaVmYACgkQCaWpQKGI+9QdTgCfZqb/371agU0rPsHsyx9aJdzv
+VSkAn0WiHwGfdRhUx7uZ9H4+UyS2Q0YC
+=gv5j
+-----END PGP SIGNATURE-----
