@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/logcheck
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-admin/logcheck/ChangeLog,v 1.30 2014/02/08 06:06:35 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-admin/logcheck/ChangeLog,v 1.31 2014/03/07 23:29:41 pacho Exp $
+
+  07 Mar 2014; Pacho Ramos <pacho@gentoo.org> logcheck-1.3.15-r2.ebuild:
+  amd64 stable, bug #495316
 
 *logcheck-1.3.16 (08 Feb 2014)
 
